--- a/src/resources/views/admin/hoa_don/hoa_don.ejs
+++ b/src/resources/views/admin/hoa_don/hoa_don.ejs
@@ -123,8 +123,10 @@
                                     <div class="d-flex ">
                                         <button class="btn btn-outline-info btn-sm mx-1 chuyenBtn"
                                             data-order-id="<%= hoadon.id %>">Chuyển</button>
-                                        <a href="" class="btn btn-outline-success btn-sm mx-1">Sửa</a>
-                                        <button class="btn btn-outline-danger btn-sm mx-1">Xóa</button>
+                                        <a href="/admin/edit_hoa_don/<%= hoadon.id %>"
+                                            class="btn btn-outline-success btn-sm mx-1">Sửa</a>
+                                        <a href="#" onclick="confirmDelete(`<%= hoadon.id %>`)"
+                                            class="btn btn-outline-danger btn-sm mx-1">Xóa</a>
                                         <a href="/admin/chi_tiet_hoa_don/<%= hoadon.id %>"
                                             class="btn btn-outline-danger btn-sm mx-1">Chi tiết</a>
                                     </div>
@@ -201,6 +203,15 @@
 
         </script>
 
+        <script>
+            function confirmDelete(id) {
+                if (confirm("Bạn có chắc chắn muốn xóa hóa đơn này?")) {
+                    window.location.href = "/admin/xoa_hoa_don/" + id;
+                } else {
+                    // Không làm gì cả
+                }
+            }
 
-        <!-- /.content-wrapper -->
+        </script>
+
         <%- include('../footer.ejs') %>
